07_retirement/grade.txt
Grading at Sat Oct 17 03:16:49 UTC 2020
Attempting to compile retirement.c
retirement.c:25:16: error: parameter 3 (‘working’) has incomplete type
    retire_info working, //info about working
                ^
retirement.c:26:16: error: parameter 4 (‘retired’) has incomplete type
    retire_info retired) //info about being retired
                ^
retirement.c: In function ‘main’:
retirement.c:42:15: error: storage size of ‘working’ isn’t known
   retire_info working;
               ^
retirement.c:47:15: error: storage size of ‘retired’ isn’t known
   retire_info retired;
               ^
retirement.c:47:15: error: unused variable ‘retired’ [-Werror=unused-variable]
retirement.c:42:15: error: unused variable ‘working’ [-Werror=unused-variable]
   retire_info working;
               ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
